Warehouse update