@@ -1,8 +1,11 @@
 package pharma.Handler;
 
 import algo.ShelfInfo;
+import algo.ShelvesCapacity;
 import javafx.application.Platform;
+import javafx.collections.FXCollections;
 import javafx.scene.Scene;
+import javafx.scene.control.Spinner;
 import javafx.scene.control.TextField;
 import javafx.scene.layout.VBox;
 import javafx.stage.Stage;
@@ -21,15 +24,15 @@ import org.testfx.framework.junit5.ApplicationExtension;
 import org.testfx.framework.junit5.Start;
 import org.testfx.util.WaitForAsyncUtils;
 import pharma.Model.FieldData;
-import pharma.Model.Warehouse;
+import pharma.Model.WarehouseModel;
 import pharma.Storage.FileStorage;
 import pharma.config.Utility;
 import pharma.config.database.Database;
 import pharma.dao.MagazzinoDao;
 import pharma.dao.ShelfDao;
+import pharma.dao.ShelvesDao;
 import pharma.javafxlib.test.SimulateEvents;
 
-import javax.xml.crypto.Data;
 import java.io.FileReader;
 import java.io.IOException;
 import java.util.ArrayList;
@@ -37,7 +40,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Properties;
 
-import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(ApplicationExtension.class)
@@ -48,6 +50,8 @@ class ShelfHandlerTest {
     private MagazzinoDao magazzinoDao;
     @Mock
     private ShelfDao shelfDao;
+    @Mock
+    private ShelvesDao shelvesDao;
     @Start
     public void  start(Stage stage){
         VBox vBox=new VBox();
@@ -68,9 +72,9 @@ class ShelfHandlerTest {
     public void ValidValidationForms(FxRobot robot){
         Platform.runLater(()->{
 
-            Warehouse warehouse=new Warehouse(1,"A10",new PGgeometry(new Point(18.111999,20.008888)),"Via Crescenzio","Roma","Roma",List.of());
-            when(magazzinoDao.findAll()).thenReturn((List<Warehouse>) List.of(warehouse));
-            shelfHandler=new ShelfHandler("Inserisci Ripiani", new ArrayList<>(Arrays.asList(magazzinoDao,shelfDao)));
+            WarehouseModel warehouseModel =new WarehouseModel(1,"A10",new PGgeometry(new Point(18.111999,20.008888)),"Via Crescenzio","Roma","Roma",List.of());
+            when(magazzinoDao.findAll()).thenReturn((List<WarehouseModel>) List.of(warehouseModel));
+            shelfHandler=new ShelfHandler("Inserisci Ripiani", new ArrayList<>(Arrays.asList(magazzinoDao,shelfDao,shelvesDao)), FXCollections.observableArrayList());
             TextField t_code=Utility.extract_value_from_list(shelfHandler.getControlList(), TextField.class).getFirst();
             SearchableComboBox<FieldData> s_combox=Utility.extract_value_from_list(shelfHandler.getControlList(),SearchableComboBox.class).getFirst();
             SimulateEvents.writeOn(t_code,"A1200");
@@ -85,15 +89,14 @@ class ShelfHandlerTest {
         Assertions.assertTrue(shelfHandler.isCheck_validate());
 
 
-
-      //  robot.sleep(50000000);
+        robot.sleep(50000000);
     }
     @Test
     public void InvalidValidationForms(FxRobot robot){
         Platform.runLater(()->{
-            Warehouse warehouse=new Warehouse(1,"A10",new PGgeometry(new Point(18.111999,20.008888)),"Via Crescenzio","Roma","Roma",List.of());
-            when(magazzinoDao.findAll()).thenReturn(List.of(warehouse));
-            shelfHandler=new ShelfHandler("Inserisci Ripiani", new ArrayList<>(Arrays.asList(magazzinoDao,shelfDao)));
+            WarehouseModel warehouseModel =new WarehouseModel(1,"A10",new PGgeometry(new Point(18.111999,20.008888)),"Via Crescenzio","Roma","Roma",List.of());
+            when(magazzinoDao.findAll()).thenReturn(List.of(warehouseModel));
+            shelfHandler=new ShelfHandler("Inserisci Ripiani", new ArrayList<>(Arrays.asList(magazzinoDao,shelfDao)),FXCollections.observableArrayList());
             TextField t_code=Utility.extract_value_from_list(shelfHandler.getControlList(), TextField.class).getFirst();
             SearchableComboBox<FieldData> s_combox=Utility.extract_value_from_list(shelfHandler.getControlList(),SearchableComboBox.class).getFirst();
             SimulateEvents.writeOn(t_code,"A1200");
@@ -111,25 +114,53 @@ class ShelfHandlerTest {
     @Test
     public void ValidFormInsert(FxRobot robot){
         Platform.runLater(()->{
-            Warehouse warehouse=new Warehouse(1,"A10",new PGgeometry(new Point(18.111999,20.008888)),"Via Crescenzio","Roma","Roma",List.of());
-            when(magazzinoDao.findAll()).thenReturn(List.of(warehouse));
-            shelfHandler=new ShelfHandler("Inserisci Ripiani", new ArrayList<>(Arrays.asList(magazzinoDao,shelfDao)));
+            WarehouseModel warehouseModel =new WarehouseModel(1,"A10",new PGgeometry(new Point(18.111999,20.008888)),"Via Crescenzio","Roma","Roma",List.of());
+            when(magazzinoDao.findAll()).thenReturn(List.of(warehouseModel));
+            shelfHandler=new ShelfHandler("Inserisci Ripiani", new ArrayList<>(Arrays.asList(magazzinoDao,shelfDao,shelvesDao)),FXCollections.observableArrayList());
+            List<Spinner> list=Utility.extract_value_from_list(shelfHandler.getControlList(), Spinner.class);
             TextField t_code=Utility.extract_value_from_list(shelfHandler.getControlList(), TextField.class).getFirst();
             SearchableComboBox<FieldData> s_combox=Utility.extract_value_from_list(shelfHandler.getControlList(),SearchableComboBox.class).getFirst();
+            SimulateEvents.setSpinner(list.get(4),2);
             SimulateEvents.writeOn(t_code,"A1200");
             SimulateEvents.setFirstElementSearchableBox(s_combox);
-            SimulateEvents.clickOn(shelfHandler.getButtonOK());
+
             when(shelfDao.insert(Mockito.any(ShelfInfo.class))).thenReturn(true);
+            when(shelvesDao.insert(Mockito.any(ShelvesCapacity.class))).thenReturn(true,true);
 
             shelfHandler.execute();
 
         });
-     //   WaitForAsyncUtils.waitForFxEvents();
-    //    Assertions.assertTrue(shelfHandler.isCond());
+        WaitForAsyncUtils.waitForFxEvents();
+        Assertions.assertFalse(shelfHandler.isCond());
 
 
 
          robot.sleep(50000000);
+    }
+    @Test
+    public void InValidFormInsert(FxRobot robot){
+        Platform.runLater(()->{
+            WarehouseModel warehouseModel =new WarehouseModel(1,"A10",new PGgeometry(new Point(18.111999,20.008888)),"Via Crescenzio","Roma","Roma",List.of());
+            when(magazzinoDao.findAll()).thenReturn(List.of(warehouseModel));
+            shelfHandler=new ShelfHandler("Inserisci Ripiani", new ArrayList<>(Arrays.asList(magazzinoDao,shelfDao,shelvesDao)),FXCollections.observableArrayList());
+            List<Spinner> list=Utility.extract_value_from_list(shelfHandler.getControlList(), Spinner.class);
+            TextField t_code=Utility.extract_value_from_list(shelfHandler.getControlList(), TextField.class).getFirst();
+            SearchableComboBox<FieldData> s_combox=Utility.extract_value_from_list(shelfHandler.getControlList(),SearchableComboBox.class).getFirst();
+            SimulateEvents.writeOn(t_code,"A1200");
+            SimulateEvents.setFirstElementSearchableBox(s_combox);
+            SimulateEvents.setSpinner(list.get(4),2);
+            when(shelfDao.insert(Mockito.any(ShelfInfo.class))).thenReturn(true);
+            when(shelvesDao.insert(Mockito.any(ShelvesCapacity.class))).thenReturn(true,false);
+
+            shelfHandler.execute();
+
+        });
+        WaitForAsyncUtils.waitForFxEvents();
+        Assertions.assertFalse(shelfHandler.isCond());
+
+
+
+        //robot.sleep(50000000);
     }
     @Test
     public void ValidFormInsertIntegration(FxRobot robot){
@@ -143,13 +174,16 @@ class ShelfHandlerTest {
             }
             MagazzinoDao magazzinoDao_real=new MagazzinoDao(Database.getInstance(properties));
             ShelfDao shelfDao_real=new ShelfDao(Database.getInstance(properties));
+            ShelvesDao shelvesDao_real=new ShelvesDao(Database.getInstance(properties));
             FieldData f1=FieldData.FieldDataBuilder.getbuilder().
                     setId(1).setcode("A10").setStreet("Via Crescenzio").setComune("Roma").setLatitude(18.111999).setLongitude(20.008888).build();
+            shelfHandler=new ShelfHandler("Inserisci Ripiani", new ArrayList<>(Arrays.asList(magazzinoDao_real,shelfDao_real,shelvesDao_real)),FXCollections.observableArrayList());
+            List<Spinner> list=Utility.extract_value_from_list(shelfHandler.getControlList(), Spinner.class);
+            SimulateEvents.setSpinner(list.get(4),2);
 
-            shelfHandler=new ShelfHandler("Inserisci Ripiani", new ArrayList<>(Arrays.asList(magazzinoDao_real,shelfDao_real)));
             TextField t_code=Utility.extract_value_from_list(shelfHandler.getControlList(), TextField.class).getFirst();
             SearchableComboBox<FieldData> s_combox=Utility.extract_value_from_list(shelfHandler.getControlList(),SearchableComboBox.class).getFirst();
-            SimulateEvents.writeOn(t_code,"A1200");
+            SimulateEvents.writeOn(t_code,"A1202");
             SimulateEvents.setFirstElementSearchableBox(s_combox);
             SimulateEvents.clickOn(shelfHandler.getButtonOK());
 
@@ -161,7 +195,7 @@ class ShelfHandlerTest {
 
 
 
-        robot.sleep(50000000);
+        //robot.sleep(50000000);
     }
 
 
